--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,10 +1,25 @@
-<ul>
-    {{#each brawler}}
-        <li>
-            <h2>{{this.userName}}</h2>
-            <h2>{{this.charName}}</h2>
-            <h2>{{this.attack}}</h2>
-            <h2>{{this.defense}}</h2>
-            <h2>{{this.intellect}}</h2>
-        </li>
-    {{/each}}
+<div id = "welcomeScreen">
+    <h1>Welcome to Boloney Time Machine Brawlers</h1>
+    <br>
+    <button id = "newGame">New Game</button>
+    <br>
+    <button id = "continueGame">Continue</button>
+</div>
+
+<div id = "createUser" class = "hidden">
+    
+</div>
+
+<div id = "userInfo" class = "hidden">
+    <ul>
+        {{#each brawler}}
+            <li>
+                <h2>{{this.userName}}</h2>
+                <h2>{{this.charName}}</h2>
+                <h2>{{this.attack}}</h2>
+                <h2>{{this.defense}}</h2>
+                <h2>{{this.intellect}}</h2>
+            </li>
+        {{/each}}
+    </ul>
+</div>
