--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,7 +7,21 @@
 </div>
 
 <div id = "createUser" class = "hidden">
-    
+    <h1>Create your Character</h1>
+    <form class="create-form">
+        <span>Username: </span><textarea id="userNameInput" rows="1" cols="40"></textarea>
+        <span>          </span>
+        <span>Password: </span><textarea id="passwordInput" rows="1" cols="40"></textarea><br>
+        <div>
+            <h3>Chose your character</h3>
+            <br>
+            <button id = "heroCharacter">HERO</button>
+            <button id = "sidekickCharacter">Sidekick</button>
+            <button id = "shadowtakenCharacter">Shadowtaken</button>
+            <button id = "mothmanCharacter">Mothman</button>
+        </div><br>
+        <button id="submitUser">Submit</button>
+    </form>
 </div>
 
 <div id = "userInfo" class = "hidden">
