modified stats, added commentary

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,9 +16,9 @@
             <h3>Chose your character</h3>
             <br>
             <button id = "heroCharacter">HERO</button>
-            <button id = "sidekickCharacter">Sidekick</button>
-            <button id = "shadowtakenCharacter">Shadowtaken</button>
-            <button id = "mothmanCharacter">Mothman</button>
+            <button id = "sidekickCharacter">SIDEKICK</button>
+            <button id = "shadowtakenCharacter">SHADOWTAKEN</button>
+            <button id = "mothmanCharacter">MOTHMAN</button>
         </div><br>
         <button id="submitUser">Submit</button>
     </form>
