--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,45 +1,47 @@
-<div id = "welcomeScreen">
-    <h1>Welcome to Boloney Time Machine Brawlers</h1>
-    <br>
-    <button id = "newGame">New Game</button>
-    <br>
-    <button id = "continueGame">Continue</button>
-</div>
+<div class="container main-screen">
+    <div id = "welcomeScreen">
+        <img class="homepage-header col-md-12" src="../public/assets/images/Header.png">
+        <br>
+        <button id = "newGame" class="btn pulse">New Game</button>
+        <br>
+        <button id = "continueGame" class="btn pulse">Continue</button>
+    </div>
 
-<div id = "createUser" class = "hidden">
-    <h1>Create your Character</h1>
-    <form class="create-form">
-        <span>Username: </span><textarea id="userNameInput" rows="1" cols="40"></textarea>
-        <span>          </span>
-        <span>Password: </span><textarea id="passwordInput" rows="1" cols="40"></textarea><br>
-        <div>
-            <h3>Chose your character</h3>
-            
-            
-            <div id="myID">
-                <br>
-                <button class="btn active" id = "heroCharacter">HERO</button>
-                <button class="btn" id = "sidekickCharacter">Sidekick</button>
-                <button class="btn" id = "shadowtakenCharacter">Shadowtaken</button>
-                <button class="btn" id = "mothmanCharacter">Mothman</button>
-            </div><br>
-            </div>
-        <button id="submitUser">Submit</button>
-        <button id="backHome">Home Page</button>
+    <div id = "createUser" class = "hidden">
+        <h1>Create your Character</h1>
+        <form class="create-form">
+            <span>Username: </span><textarea id="userNameInput" rows="1" cols="40"></textarea>
+            <span>          </span>
+            <span>Password: </span><textarea id="passwordInput" rows="1" cols="40"></textarea><br>
+            <div>
+                <h3>Chose your character</h3>
+                
+                
+                <div id="myID">
+                    <br>
+                    <button class="btn active" id = "heroCharacter">HERO</button>
+                    <button class="btn" id = "sidekickCharacter">Sidekick</button>
+                    <button class="btn" id = "shadowtakenCharacter">Shadowtaken</button>
+                    <button class="btn" id = "mothmanCharacter">Mothman</button>
+                </div><br>
+                </div>
+            <button id="submitUser">Submit</button>
+            <button id="backHome">Home Page</button>
 
-    </form>
-</div>
+        </form>
+    </div>
 
-<div id = "userInfo" class = "hidden">
-    <ul>
-        {{#each brawler}}
-            <li>
-                <h2>{{this.userName}}</h2>
-                <h2>{{this.charName}}</h2>
-                <h2>{{this.attack}}</h2>
-                <h2>{{this.defense}}</h2>
-                <h2>{{this.intellect}}</h2>
-            </li>
-        {{/each}}
-    </ul>
+    <div id = "userInfo" class = "hidden">
+        <ul>
+            {{#each brawler}}
+                <li>
+                    <h2>{{this.userName}}</h2>
+                    <h2>{{this.charName}}</h2>
+                    <h2>{{this.attack}}</h2>
+                    <h2>{{this.defense}}</h2>
+                    <h2>{{this.intellect}}</h2>
+                </li>
+            {{/each}}
+        </ul>
+    </div>
 </div>
