my latest atest changes in script.js

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -31,6 +31,15 @@
     </form>
 </div>
 
+
+
+<div id = "charSelection" class = "hidden">
+
+
+
+
+</div>
+
 <div id = "userInfo" class = "hidden">
     <ul>
         {{#each brawler}}
@@ -40,6 +49,7 @@
                 <h2>{{this.attack}}</h2>
                 <h2>{{this.defense}}</h2>
                 <h2>{{this.intellect}}</h2>
+                <h2 class="testbutton"></h2>
             </li>
         {{/each}}
     </ul>
