added a table to the the continue div and made it pretty but not as pretty as Rich good stuff

--- a/public/assets/css/btmbrawler_style.css
+++ b/public/assets/css/btmbrawler_style.css
@@ -70,3 +70,11 @@ body {
     animation: animateCity 2s linear;
     animation-fill-mode: forwards;
 }
+
+.table td  {
+    text-align: center;   
+}
+
+th {
+    text-align: center
+}
