--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -32,17 +32,33 @@
         </form>
     </div>
 
-    <div id = "userInfo" class = "hidden">
-        <ul>
+<div id = "userInfo" class = "hidden">
+    <div class = "container">
+        <table class = "table">
+            <thead>
+                <tr>
+                <th class="bg-warning "scope = "col">#</th>
+                <th class="bg-info" scope = "col">Username</th>
+                <th class="bg-warning"scope = "col">Character</th>
+                <th class="bg-info"scope = "col">Attack Power</th>
+                <th class="bg-warning"scope = "col">Defense Health</th>
+                <th class="bg-info"scope = "col">Intellect Prowless</th>
+                <tr>
+            </thead>
+            <tbody>
             {{#each brawler}}
-                <li>
-                    <h2>{{this.userName}}</h2>
-                    <h2>{{this.charName}}</h2>
-                    <h2>{{this.attack}}</h2>
-                    <h2>{{this.defense}}</h2>
-                    <h2>{{this.intellect}}</h2>
-                </li>
+                <tr>
+                    <th class="bg-warning"scope="row">{{this.id}}</th>
+                    <td class="bg-info">{{this.userName}}</td>
+                    <td class="bg-warning">{{this.charName}}</td>
+                    <td class="bg-info">{{this.attack}}</td>
+                    <td class="bg-warning">{{this.defense}}</td>
+                    <td class="bg-info">{{this.intellect}}</td>
+                    <td class="bg-danger"><strong>Continue the Fight?</strong></td>
+                </tr>
             {{/each}}
-        </ul>
+            </tbody>
+        </table>
     </div>
+</div>
 </div>
