--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,6 @@
+
 <div class="container main-screen">
+<section>
     <div id = "welcomeScreen">
         <img class="homepage-header col-md-12" src="../public/assets/images/Header.png">
         <br>
@@ -44,4 +46,8 @@
             {{/each}}
         </ul>
     </div>
+    <div class="footer">
+        <p>&copy 2018 by Leah and the Git Squad Inc.</p>
+    </div>
+</section>    
 </div>
