--- a/public/assets/css/btmbrawler_style.css
+++ b/public/assets/css/btmbrawler_style.css
@@ -1,7 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
 
+html {
+    position: relative;
+    min-height: 100%;
+}
+
 body {
     background-color: black;
+    margin-bottom: 45px; /* Margin bottom by footer height */
 }
 
 .hidden {
@@ -18,7 +24,7 @@ body {
     font-family: 'Press Start 2P', cursive;
     margin: auto;
     display: block;
-    font-size: 1.5em;
+    font-size: 1.3em;
     padding: 13px;
     color: #F1DA28;
     background-color: #494D7C;
@@ -62,11 +68,27 @@ body {
 }
 
 @keyframes animateCity {
-	from { background-position: 0px 30px, 0px 40px, 0px 20px, 0px -30px; }
+	from { background-position: 0px 30px, 0px 40px, 0px -20px, 0px -30px; }
 	to { background-position: 130px -130px, 0px -50px, 0px -50px, 0px -30px; }
 }
 		
 .main-screen { 
-    animation: animateCity 2s linear;
+    animation: animateCity 3s linear;
     animation-fill-mode: forwards;
 }
+
+.footer {
+    font-family: 'Press Start 2P', cursive;
+    font-size: .8em;
+    color: white;
+    text-align: center;
+    position: ;
+    /* bottom: 17px; */
+    margin-left: -16px;
+    width: 103%;
+    height: 45px; /* Set the fixed height of the footer here */
+    line-height: 50px; /* Vertically center the text there */
+    background-color: rgb(39, 38, 38);
+    margin-top: 180px;
+}
+
