--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,38 +1,70 @@
-
 <div class="container main-screen">
 <section>
     <div id = "welcomeScreen">
-        <img class="homepage-header col-md-12" src="../public/assets/images/Header.png">
+        <img class="homepage-header col-md-12" src="../public/assets/images/Header.png"/>
         <br>
         <button id = "newGame" class="btn pulse">New Game</button>
         <br>
         <button id = "continueGame" class="btn pulse">Continue</button>
     </div>
 
-<div id = "createUser" class = "hidden">
-    <h1>Create your Character</h1>
-    <form class="create-form">
-        <span>Username: </span><textarea id="userNameInput" rows="1" cols="40"></textarea>
-        <span>          </span>
-        <span>Password: </span><textarea id="passwordInput" rows="1" cols="40"></textarea><br>
-        <div>
-            <h3>Chose your character</h3>
-
-            
-            
-            <div id="myID">
-                <br>
-                <button class="btn active" id = "heroCharacter">HERO</button>
-                <button class="btn" id = "sidekickCharacter">Sidekick</button>
-                <button class="btn" id = "shadowtakenCharacter">Shadowtaken</button>
-                <button class="btn" id = "mothmanCharacter">Mothman</button>
-            </div><br>
+    {{!-- Enter Credentials Screen --}}
+    <div id = "enterCredentials" class = "hidden">
+        <img class="char-select-head col-md-12" src="../public/assets/images/Enter-Credentials.png"/>
+        <form class="create-form text-center">
+            <span class="pressStart">Username: </span><textarea id="userNameInput" rows="1" cols="40"></textarea>
+            </br>
+            <span class="pressStart">Password: </span><textarea id="passwordInput" rows="1" cols="40"></textarea>
+            <br>
+            <div class="backNext">
+                <button id="backHome" class="btn">Back</button>
+                <button id="submitCredentials" class="btn">Next</button>
             </div>
-        <button id="submitUser">Submit</button>
-        <button id="backHome">Home Page</button>
-
         </form>
     </div>
+
+    {{!-- Create User Screen --}}
+    <div id = "createUser" class = "hidden">
+        <img class="char-select-head col-md-12" src="../public/assets/images/Character-Select.png"/>
+        <div id="myID" class="charSelect text-center">
+            <br>
+            {{!-- <div class="col-xs-12 charNames">Hero&nbsp; Sidekick Shadowtaken Mothman</div> --}}
+            <img class="img img-responsive heroCharacter flash" src="../public/assets/images/charSelect/HeroSelect.png" />
+            <img class="img img-responsive sidekickCharacter flash" src="../public/assets/images/charSelect/SidekickSelect.png" />
+            <img class="img img-responsive shadowtakenCharacter flash" src="../public/assets/images/charSelect/ShadowtakenSelect.png" />
+            <img class="img img-responsive mothmanCharacter flash" src="../public/assets/images/charSelect/MothmanSelect.png" />      
+            <div class="container">
+                <div class="row">
+                        <div class="col-md-4 heroStats">
+                            <img class="img img-responsive heroStats-img" src="../public/assets/images/charSelect/HeroStats.png"/>
+                        </div>
+                    <div class="col-md-8 heroStats-text">
+                        <p>Name: <span class="yellow">Hero</span></p>
+                        <p>Class: <span class="yellow">Brawler</span></p>
+                        <p>Strength: <span class="yellow">20</span></p>
+                        <p>Defense: <span class="yellow">20</span></p>
+                        <P>Intelligence: <span class="yellow">20</span></P>
+                    </div>
+                </div>
+            </div>
+                {{!-- <button class="btns flash active" id = "heroCharacter">
+                    <img class="heroCharacter" src="../public/assets/images/charSelect/HeroSelect.png" width="150"/>
+                </button>
+                <button class="btns flash" id = "sidekickCharacter">
+                    <img src="../public/assets/images/charSelect/SidekickSelect.png" width="150" />
+                </button>
+                <button class="btns flash" id = "shadowtakenCharacter">
+                    <img src="../public/assets/images/charSelect/ShadowtakenSelect.png" width="150" />
+                </button>
+                <button class="btns flash" id = "mothmanCharacter">
+                    <img src="../public/assets/images/charSelect/MothmanSelect.png" width="150" />
+                </button> --}}
+        </div>
+        <br>
+        <button id="submitUser">Submit</button>
+        <button id="backHome">Home Page</button>
+    </div>
+
 
 <div id = "userInfo" class = "hidden">
     <div class = "container">
@@ -63,9 +95,9 @@
         </table>
     </div>
 
-    <div class="footer">
+    {{!-- <div class="footer">
         <p>&copy 2018 by Leah and the Git Squad Inc.</p>
-    </div>
+    </div> --}}
 </section>    
 </div>
 
