--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,7 +17,7 @@
             <span class="pressStart">Password: </span><textarea id="passwordInput" rows="1" cols="40"></textarea>
             <br>
             <div class="backNext">
-                <button id="backHome" class="btn">Back</button>
+                <button class="btn backHome">Back</button>
                 <button id="submitCredentials" class="btn">Next</button>
             </div>
         </form>
@@ -59,10 +59,13 @@
                 <button class="btns flash" id = "mothmanCharacter">
                     <img src="../public/assets/images/charSelect/MothmanSelect.png" width="150" />
                 </button> --}}
+                <br>
+        <div>
+            <button class="backHome btn">Home</button>
+            <button id="backToUser" class="btn">User Credentials</button>
+            <button id="submitUser" class="btn">Submit</button>
         </div>
-        <br>
-        <button id="submitUser">Submit</button>
-        <button id="backHome">Home Page</button>
+        </div>
     </div>
 
 
