--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -29,10 +29,10 @@
         <div id="myID" class="charSelect text-center">
             <br>
             {{!-- <div class="col-xs-12 charNames">Hero&nbsp; Sidekick Shadowtaken Mothman</div> --}}
-            <img class="img img-responsive heroCharacter flash" src="../public/assets/images/charSelect/HeroSelect.png" />
-            <img class="img img-responsive sidekickCharacter flash" src="../public/assets/images/charSelect/SidekickSelect.png" />
-            <img class="img img-responsive shadowtakenCharacter flash" src="../public/assets/images/charSelect/ShadowtakenSelect.png" />
-            <img class="img img-responsive mothmanCharacter flash" src="../public/assets/images/charSelect/MothmanSelect.png" />      
+            <img id="heroCharacter" class="img img-responsive heroCharacter flash" src="../public/assets/images/charSelect/HeroSelect.png" />
+            <img id="sidekickCharacter" class="img img-responsive sidekickCharacter flash" src="../public/assets/images/charSelect/SidekickSelect.png" />
+            <img id="shadowtakenCharacter" class="img img-responsive shadowtakenCharacter flash" src="../public/assets/images/charSelect/ShadowtakenSelect.png" />
+            <img id="mothmanCharacter" class="img img-responsive mothmanCharacter flash" src="../public/assets/images/charSelect/MothmanSelect.png" />      
             <div class="container">
                 <div class="row">
                         <div class="col-md-4 heroStats">
