--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -30,6 +30,7 @@
             </div>
         <button id="submitUser">Submit</button>
         <button id="backHome">Home Page</button>
+        <div id="itembuttons"></div>
 
         </form>
     </div>
