current changes ignore these

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -21,7 +21,7 @@
                 <button id="submitCredentials" class="btn">Next</button>
             </div>
         <button id="submitUser">Submit</button>
-        <button id="backHome">Home Page</button>
+        <button class="backHome">Home Page</button>
         <div id="itembuttons"></div>
 
         </form>
