--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,7 +22,7 @@
             </div>
         <button id="submitUser">Submit</button>
         <button class="backHome">Home Page</button>
-        <div id="itembuttons"></div>
+        
 
         </form>
     </div>
@@ -48,7 +48,15 @@
                         <p>Strength: <span class="yellow">20</span></p>
                         <p>Defense: <span class="yellow">20</span></p>
                         <P>Intelligence: <span class="yellow">20</span></P>
+
+                        <h2>ITEMS:</h2>
+                        <div id="heroButtons" ></div>
+                        <div id="sidekickButtons"></div>
+                        <div id="shadowtakenButtons"></div>
+                        <div id="mothmanButtons"></div>
                     </div>
+                    
+                    
                 </div>
             </div>
                 {{!-- <button class="btns flash active" id = "heroCharacter">
