--- a/views/items.handlebars
+++ b/views/items.handlebars
@@ -5,6 +5,8 @@
             <li><h2>{{this.attack}}</h2></li>
             <li><h2>{{this.defense}}</h2></li>
             <li><h2>{{this.intellect}}</h2></li>
+            <li><h2>{{this.charName}}</h2></li>
+
         
     {{/each}}
 </ul>
