--- a/public/assets/css/btmbrawler_style.css
+++ b/public/assets/css/btmbrawler_style.css
@@ -122,15 +122,15 @@ body {
 }
 
 .main-screen {
-	background-image: url("../images/Hero-and-Sidekick.png"), url("../images/Front-Buildings.png"), url("../images/Rear-Buildings.png"), url("../images/Clouds-and-Moon.png");
+	background-image: url("../images/Hero-and-Sidekick.png"), url("../images/Front-Buildings.png"), url("../images/Roto-Bot.png"), url("../images/Rear-Buildings.png"), url("../images/Clouds-and-Moon.png");
     background-repeat: no-repeat, no-repeat, repeat-x;
-    background-size: 100%, 100%, 100%, 100%;
+    background-size: 100%, 100%, 100%, 100%, 100%;
     min-height:575px;
 }
 
 @keyframes animateCity {
-	from { background-position: 0px 30px, 0px 120px, 0px 50px, 0px -30px; }
-	to { background-position: 20px -50px, 0px 20px, 0px -20px, 0px -30px; }
+	from { background-position: 0 30px, 0 120px, -450px 50px, 0 30px, 0 -30px; }
+	to { background-position: 20px -50px, 0 95px, -375px 65px, 0 0, 0 -30px; }
 }
 		
 .main-screen { 
@@ -222,6 +222,12 @@ body {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     text-align: left;
+}
+
+.blankStats {
+    background: rgba(0, 0, 0, 0.01);
+    width: 250px;
+    height: 283px;
 }
 
 .yellow {
