Restoring DB Folder

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,8 +25,8 @@
                 <button class="btn backHome">Back</button>
                 <button id="submitCredentials" class="btn">Next</button>
             </div>
-        <button id="submitUser">Submit</button>
-        <button class="backHome">Home Page</button>
+        {{!-- <button id="submitUser">Submit</button>
+        <button class="backHome">Home Page</button> --}}
         
 
         </form>
