--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,5 +19,6 @@
     {{{body}}}
 
     <script src="/public/assets/js/script.js"></script>
+    <script src="/public/assets/js/gamescript.js"></script>
 </body>
 </html>
