--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -101,7 +101,25 @@
                         <div id="mothmanButtons"></div>
                     </div>
                 </div>
+                <button id="itemScreen" class="btn">Next</button>
             </div>
+
+
+
+
+        <div id = "itemSelection" class = "hidden">
+        <img class="char-select-head col-md-12" src="../public/assets/images/Enter-Credentials.png"/>
+        
+          <h2>Data will go here</h2>
+            <div class="backNext">
+                <button class="btn backHome">Back</button>
+            </div>
+        {{!-- <button id="submitUser">Submit</button>
+        <button class="backHome">Home Page</button> --}}
+        
+
+        
+         </div>  
             {{!-- MODAL BOX
             <div class="char-sel-modal" tabindex="-1" role="dialog">
             <div class="modal-dialog" role="document">
