--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -27,8 +27,54 @@
             </div>
         {{!-- <button id="submitUser">Submit</button>
         <button class="backHome">Home Page</button> --}}
+        
+
         </form>
     </div>
+
+    {{!-- item screen --}}
+{{!-- Creates the page for item selection where I will be inputting all the data from itemsDB --}}
+    <div id = "itemSelection" class = "hidden">
+        <img class="char-select-head col-md-12" src="../public/assets/images/Pick-An-Item.png"/>
+        <table class="item-table" align="center">
+            <tr>
+                <tbody id="items"></tbody>
+            </tr>
+        </table>
+        <br><br><br>
+        <div class="backNext text-center">
+            <button id="charCreation" class="btn">Back To Character Creation</button>
+            <button id="submitUser" class="btn">Submit</button>
+        </div>
+             
+    </div>  
+
+    {{!-- Create User Modal Box --}}
+        <!-- The Modal -->
+        <div class="modal" id="char-sel-modal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+
+            <!-- Modal Header -->
+            {{!-- <div class="modal-header">
+                <h4 class="modal-title">Modal Heading</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div> --}}
+
+            <!-- Modal body -->
+            <div class="modal-body pressStart">
+                Are you sure?
+            </div>
+
+            <!-- Modal footer -->
+            <div class="modal-footer">
+                <button id="modal-close" class="btn" data-dismiss="modal">No</button>
+                <button id="itemScreen"  class="btn" data-dismiss="modal">Yes</button>
+            </div>
+
+            </div>
+        </div>
+        </div>
 
     {{!-- Create User Screen --}}
     <div id = "createUser" class="hidden">
@@ -36,10 +82,10 @@
         <div id="myID" class="charSelect text-center">
             <br>
             {{!-- <div class="col-xs-12 charNames">Hero&nbsp; Sidekick Shadowtaken Mothman</div> --}}
-            <img id="heroCharacter" class="img img-responsive heroCharacter flash" data-toggle="modal" data=target="#char-sel-modal" src="../public/assets/images/charSelect/HeroSelect.png" />
-            <img id="sidekickCharacter" class="img img-responsive sidekickCharacter flash" src="../public/assets/images/charSelect/SidekickSelect.png" />
-            <img id="shadowtakenCharacter" class="img img-responsive shadowtakenCharacter flash" src="../public/assets/images/charSelect/ShadowtakenSelect.png" />
-            <img id="mothmanCharacter" class="img img-responsive mothmanCharacter flash" src="../public/assets/images/charSelect/MothmanSelect.png" />      
+            <img id="heroCharacter" class="img img-responsive heroCharacter flash" data-toggle="modal" data-target="#char-sel-modal" src="../public/assets/images/charSelect/HeroSelect.png" />
+            <img id="sidekickCharacter" class="img img-responsive sidekickCharacter flash" data-toggle="modal" data-target="#char-sel-modal" src="../public/assets/images/charSelect/SidekickSelect.png" />
+            <img id="shadowtakenCharacter" class="img img-responsive shadowtakenCharacter flash" data-toggle="modal" data-target="#char-sel-modal" src="../public/assets/images/charSelect/ShadowtakenSelect.png" />
+            <img id="mothmanCharacter" class="img img-responsive mothmanCharacter flash" data-toggle="modal" data-target="#char-sel-modal" src="../public/assets/images/charSelect/MothmanSelect.png" />      
             <div class="container">
                 <div class="row blankStats"></div>
                 {{!-- Hero Stats --}}
@@ -53,8 +99,10 @@
                         <p>Strength: <span class="yellow">20</span></p>
                         <p>Defense: <span class="yellow">20</span></p>
                         <P>Intelligence: <span class="yellow">20</span></P>
-                        {{!-- <div id="heroButtons" ></div> --}}   
-                    </div>              
+                        {{!-- <div id="heroButtons" ></div> --}}
+                        
+                    </div>
+                                      
                 </div>
                 {{!-- Sidekick Stats --}}
                 <div class="row sidekick-DIV hidden">
@@ -96,68 +144,29 @@
                         {{!-- <div id="mothmanButtons"></div> --}}
                     </div>
                 </div>
-                <button id="itemScreen" class="btn">Next: Item Selection</button>
-            </div>
-        
-            {{!-- MODAL BOX --}}
-            <div id="char-sel-modal" class="modal fade" role="dialog">
-            <div class="modal-dialog">
-
-                <!-- Modal content-->
-                <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Modal Header</h4>
-                </div>
-                <div class="modal-body">
-                    <p>Some text in the modal.</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
-                </div>
-
-            </div>
+                {{!-- <button id="itemScreen" class="btn">Next: Item Selection</button> --}}
             </div>
 
-                {{!-- <button class="btns flash active" id = "heroCharacter">
-                    <img class="heroCharacter" src="../public/assets/images/charSelect/HeroSelect.png" width="150"/>
-                </button>
-                <button class="btns flash" id = "sidekickCharacter">
-                    <img src="../public/assets/images/charSelect/SidekickSelect.png" width="150" />
-                </button>
-                <button class="btns flash" id = "shadowtakenCharacter">
-                    <img src="../public/assets/images/charSelect/ShadowtakenSelect.png" width="150" />
-                </button>
-                <button class="btns flash" id = "mothmanCharacter">
-                    <img src="../public/assets/images/charSelect/MothmanSelect.png" width="150" />
-                </button> --}}
-                <br>
+            {{!-- <button class="btns flash active" id = "heroCharacter">
+                <img class="heroCharacter" src="../public/assets/images/charSelect/HeroSelect.png" width="150"/>
+            </button>
+            <button class="btns flash" id = "sidekickCharacter">
+                <img src="../public/assets/images/charSelect/SidekickSelect.png" width="150" />
+            </button>
+            <button class="btns flash" id = "shadowtakenCharacter">
+                <img src="../public/assets/images/charSelect/ShadowtakenSelect.png" width="150" />
+            </button>
+            <button class="btns flash" id = "mothmanCharacter">
+                <img src="../public/assets/images/charSelect/MothmanSelect.png" width="150" />
+            </button> --}}
+            <br>
         <div>
             <button class="backHome btn">Home</button>
             <button id="backToUser" class="btn">User Credentials</button>
-            <button id="submitUser" class="btn">Submit</button>
+            {{!-- <button id="submitUser" class="btn">Submit</button> --}}
         </div>
         </div>
     </div>
-
-    {{!-- item screen --}}
-{{!-- Creates the page for item selection where I will be inputting all the data from itemsDB --}}
-    <div id = "itemSelection" class = " text-center hidden">
-        <img class="char-select-head col-md-12" src="../public/assets/images/Enter-Credentials.png"/>
-        <table>
-            <tr>
-                <tbody id="items"></tbody>
-            </tr>
-        </table>
-          
-         
-        <br><br><br>
-        <div class="backNext text-center">
-            <button id="charCreation" class="btn">Character Creation</button>
-            <button id="submitUser" class="btn">Submit</button>
-        </div>       
-    </div>  
 
 <div id = "userInfo" class = "hidden">
     <div class = "container">
@@ -201,4 +210,3 @@
     </div> --}}
 </section>    
 </div>
-
