--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -37,16 +37,12 @@
     <div id = "itemSelection" class = "hidden">
         <img class="char-select-head col-md-12" src="../public/assets/images/Pick-An-Item.png"/>
         <table class="item-table" align="center">
-            <tr>
-                <tbody id="items"></tbody>
-            </tr>
+                <tbody id="items" align="center"></tbody>
         </table>
-        <br><br><br>
-        <div class="backNext text-center">
+        <div class="text-center">
             <button id="charCreation" class="btn">Back To Character Creation</button>
             <button id="submitUser" class="btn">Submit</button>
         </div>
-             
     </div>  
 
     {{!-- Create User Modal Box --}}
