Shadowtaken item test

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -35,13 +35,8 @@
     <div id = "itemSelection" class = "hidden">
         <img class="char-select-head col-md-12" src="../public/assets/images/Pick-An-Item.png"/>
         <table class="item-table" align="center">
-            <tr>
-                <tbody>
-                <td id="items"></tbody>
-                </tbody>
-            </tr>
+                <tbody id="items" align="center"></tbody>
         </table>
-        <br><br><br>
         <div class="backNext text-center">
             <button id="charCreation" class="btn">Back To Character Creation</button>
             <button id="submitUser" class="btn">Submit</button>
