--- a/public/assets/css/btmbrawler_style.css
+++ b/public/assets/css/btmbrawler_style.css
@@ -52,7 +52,7 @@ body {
     margin: 8% 0;
 }
 
-#submitCredentials, .backHome,#itembuttons, #backToUser, #submitUser, #itemScreen, #charCreation, #pickItem, #modal-close {
+#submitCredentials, .backHome, #backToUser, #submitUser, #itemScreen, #charCreation, #pickItem, #modal-close {
     font-family: 'Press Start 2P', cursive;
     margin: auto;
     font-size: 1em;
@@ -65,7 +65,7 @@ body {
     margin: 0 1%;
 }
 
-#submitCredentials:hover, .backHome:hover, #backToUser:hover,#itembuttons:hover, #charCreation:hover, #submitUser:hover, #itemScreen:hover, #modal-close:hover {
+#submitCredentials:hover, .backHome:hover, #backToUser:hover, #charCreation:hover, #submitUser:hover, #itemScreen:hover, #modal-close:hover {
     transform: scale(1.05);
 }
 
@@ -104,9 +104,6 @@ body {
 #newGame:active, #continueGame:active {
     transform: scale(1.00);
 }
-
-
-
 
 .submit:focus, .startButton:focus {
     outline:none;
@@ -185,6 +182,14 @@ body {
 
 .heroCharacter, .sidekickCharacter, .shadowtakenCharacter, .mothmanCharacter {
     width: 12%;
+    border: 3px solid white;
+    border-radius: 5px;
+    margin: 0 3%;
+    transition: all 1s ease-in-out;
+}
+
+#itembuttons {
+    width: 20%;
     border: 3px solid white;
     border-radius: 5px;
     margin: 0 3%;
