the game is working...? no promises though

--- a/views/gamepage.handlebars
+++ b/views/gamepage.handlebars
@@ -10,17 +10,17 @@
 
 <h6>{{brawler.userName}}</h6>
 
-<button id="startbossone" class = "hidden">Thug</button>
+<button id ="startbossone" class = "hidden">Thug</button>
 <button id="startbosstwo" class = "hidden">Gunslinger</button>
 <button id="startbossthree" class = "hidden">Giant Robot</button>
 
 
 <br>
-<div id = "bossonescreen" class = "hidden">
+<div id = "bossonescreen" class = "bossdiv hidden">
     <h2 class = "charnamedisplay">Player</h2>
     <h4 class = "usernamedisplay">Player</h4>
     <br>
-    <button id= "playerButton">Break the Thug</button>
+    <button id= "playerButtonb1">Break the Thug</button>
     <br>
     <h6 class = "playerattack">attack</h6>
     <h6 class = "playerdefense">defense</h6>
@@ -36,11 +36,11 @@
 </div>
 
 <br>
-<div id = "bosstwoscreen" class = "hidden">
+<div id = "bosstwoscreen" class = "bossdiv hidden">
     <h2 class = "charnamedisplay">Player</h2>
     <h4 class = "usernamedisplay">Player</h4>
     <br>
-    <button id= "playerButton">Takedown the Gunslinger</button>
+    <button id= "playerButtonb2">Takedown the Gunslinger</button>
     <br>
     <h6 class = "playerattack">attack</h6>
     <h6 class = "playerdefense">defense</h6>
@@ -56,11 +56,11 @@
 </div>
 
 <br>
-<div id = "bossthreescreen" class = "hidden">
+<div id = "bossthreescreen" class = "bossdiv hidden">
     <h2 class = "charnamedisplay">Player</h2>
     <h4 class = "usernamedisplay">Player</h4>
     <br>
-    <button id= "playerButton">Strike the Robot</button>
+    <button id= "playerButtonb3">Strike the Robot</button>
     <br>
     <h6 class = "playerattack">attack</h6>
     <h6 class = "playerdefense">defense</h6>
