fix the div situation; still not pretty --> RICH MAKE THIS DOLL SHINE!

--- a/views/gamepage.handlebars
+++ b/views/gamepage.handlebars
@@ -14,76 +14,56 @@
 </div>
 
 
-<h6>{{brawler.userName}}</h6>
-
+<img id="pagename" class="char-select-head col-md-12 hidden" src="../public/assets/images/headers/Game-Page.png"/>
+<br>
 <button id ="startbossone" class = "hidden">Thug</button>
-<button id="startbosstwo" class = "hidden">Gunslinger</button>
-<button id="startbossthree" class = "hidden">Giant Robot</button>
+<button id= "startbosstwo" class = "hidden">Gunslinger</button>
+<button id= "startbossthree" class = "hidden">Giant Robot</button>
 
 
 <br>
 <div id = "bossonescreen" class = "bossdiv hidden">
+
     <h2 class = "charnamedisplay">Player</h2>
     <h4 class = "usernamedisplay">Player</h4>
     <br>
     <button id= "playerButtonb1">Break the Thug</button>
-
-<div id="gamePage" class="hidden">
-    <img class="char-select-head col-md-12" src="../public/assets/images/headers/Game-Page.png"/>
-    <h6>{{brawler.userName}}</h6>
-
-    <button id="startbossone">Thug</button>
-    <button id="startbosstwo">Gunslinger</button>
-    <button id="startbossthree">Giant Robot</button>
-
     <br>
-    <div id = "bossonescreen" class = "hidden">
-        <h2 class = "charnamedisplay">Player</h2>
-        <h4 class = "usernamedisplay">Player</h4>
-        <br>
-        <button id= "playerButton">Break the Thug</button>
-        <br>
-        <h6 class = "playerattack">attack</h6>
-        <h6 class = "playerdefense">defense</h6>
-        <h6 class = "playerintellect">intellect</h6>
-        <h4 class = "playerattackstat">pending action</h4>
+    <h6 class = "playerattack">attack</h6>
+    <h6 class = "playerdefense">defense</h6>
+    <h6 class = "playerintellect">intellect</h6>
+    <h4 class = "playerattackstat">pending action</h4>
 
-        <h2 class = "bossnamedisplay">Boss</h2>
-        <br>
-        <h6 class = "bossattack">attack</h6>
-        <h6 class = "bossdefense">defense</h6>
-        <h6 class = "bossintellect">intellect</h6>
-        <h4 class = "bossattackstat">pending action</h4>
-    </div>
+    <h2 class = "bossnamedisplay">Boss</h2>
+    <br>
+    <h6 class = "bossattack">attack</h6>
+    <h6 class = "bossdefense">defense</h6>
+    <h6 class = "bossintellect">intellect</h6>
+    <h4 class = "bossattackstat">pending action</h4>
 
+</div>
 
 <br>
 <div id = "bosstwoscreen" class = "bossdiv hidden">
+
     <h2 class = "charnamedisplay">Player</h2>
     <h4 class = "usernamedisplay">Player</h4>
     <br>
     <button id= "playerButtonb2">Takedown the Gunslinger</button>
-
     <br>
-    <div id = "bosstwoscreen" class = "hidden">
-        <h2 class = "charnamedisplay">Player</h2>
-        <h4 class = "usernamedisplay">Player</h4>
-        <br>
-        <button id= "playerButton">Takedown the Gunslinger</button>
-        <br>
-        <h6 class = "playerattack">attack</h6>
-        <h6 class = "playerdefense">defense</h6>
-        <h6 class = "playerintellect">intellect</h6>
-        <h4 class = "playerattackstat">pending action</h4>
+    <h6 class = "playerattack">attack</h6>
+    <h6 class = "playerdefense">defense</h6>
+    <h6 class = "playerintellect">intellect</h6>
+    <h4 class = "playerattackstat">pending action</h4>
 
-        <h2 class = "bossnamedisplay">Boss</h2>
-        <br>
-        <h6 class = "bossattack">attack</h6>
-        <h6 class = "bossdefense">defense</h6>
-        <h6 class = "bossintellect">intellect</h6>
-        <h4 class = "bossattackstat">pending action</h4>
-    </div>
+    <h2 class = "bossnamedisplay">Boss</h2>
+    <br>
+    <h6 class = "bossattack">attack</h6>
+    <h6 class = "bossdefense">defense</h6>
+    <h6 class = "bossintellect">intellect</h6>
+    <h4 class = "bossattackstat">pending action</h4>
 
+</div>
 
 <br>
 <div id = "bossthreescreen" class = "bossdiv hidden">
@@ -97,31 +77,17 @@
     <h6 class = "playerintellect">intellect</h6>
     <h4 class = "playerattackstat">pending action</h4>
 
+    
+    <h2 class = "bossnamedisplay">Boss</h2>
     <br>
-    <div id = "bossthreescreen" class = "hidden">
-        <h2 class = "charnamedisplay">Player</h2>
-        <h4 class = "usernamedisplay">Player</h4>
-        <br>
-        <button id= "playerButton">Strike the Robot</button>
-        <br>
-        <h6 class = "playerattack">attack</h6>
-        <h6 class = "playerdefense">defense</h6>
-        <h6 class = "playerintellect">intellect</h6>
-        <h4 class = "playerattackstat">pending action</h4>
-
-
-        <h2 class = "bossnamedisplay">Boss</h2>
-        <br>
-        <h6 class = "bossattack">attack</h6>
-        <h6 class = "bossdefense">defense</h6>
-        <h6 class = "bossintellect">intellect</h6>
-        <h4 class = "bossattackstat">pending action</h4>
-    </div>
-
-    <div id = "winlosediv" class = "hidden">
-        <h1 id = "winlosetext"></h1>
-    </div>
-</div>    
+    <h6 class = "bossattack">attack</h6>
+    <h6 class = "bossdefense">defense</h6>
+    <h6 class = "bossintellect">intellect</h6>
+    <h4 class = "bossattackstat">pending action</h4>
+</div> 
+<div id = "winlosediv" class = "hidden">
+    <h1 id = "winlosetext"></h1>
+</div>   
 </section>
 </div>
 
